--- a/templates/displayPlayer.html
+++ b/templates/displayPlayer.html
@@ -79,28 +79,28 @@
             </select>
             <input type="submit" value="Submit">
 
-            <input list="playersm1" name="player" id="playerm1" {% if men_input_disabled %}disabled{% endif %}>
+            <input list="playersm1" name="playerm1" id="playerm1" {% if men_input_disabled %}disabled{% endif %}>
             <datalist id="playersm1">
                 {% for player in players %}
                     <option value={{player}}></option>
                 {% endfor %}
             </datalist>
 
-            <input list="playersm2" name="player" id="playerm2" {% if men_input_disabled %}disabled{% endif %}>
+            <input list="playersm2" name="playerm2" id="playerm2" {% if men_input_disabled %}disabled{% endif %}>
             <datalist id="playersm2">
                 {% for player in players %}
                     <option value={{player}}></option>
                 {% endfor %}
             </datalist>
 
-            <input list="playersw1" name="player" id="playerw1" {% if women_input_disabled %}disabled{% endif %}>
+            <input list="playersw1" name="playerw1" id="playerw1" {% if women_input_disabled %}disabled{% endif %}>
             <datalist id="playersw1">
                 {% for player in players %}
                     <option value={{player}}></option>
                 {% endfor %}
             </datalist>
 
-            <input list="playersw2" name="player" id="playerw2" {% if women_input_disabled %}disabled{% endif %}>
+            <input list="playersw2" name="playerw2" id="playerw2" {% if women_input_disabled %}disabled{% endif %}>
             <datalist id="playersw2">
                 {% for player in players %}
                     <option value={{player}}></option>
